metadata/force-app/main/default/objects/CustomName_ZovZy__c/CustomName_ZovZy__c.object-meta.xml
<CustomObject>
    <description>Description_XXKls</description>
    <label>CustomLabel_KfUyW</label>
    <nameField>
        <label>CustomLabel_KfUyW</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_KfUyWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>