metadata/force-app/main/default/objects/CustomName_ZovZy__c/fields/CustomField_ejPpj__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ejPpj__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYFnDV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>