metadata/force-app/main/default/objects/CustomName_ZovZy__c/fields/CustomField_slCbU__c.field-meta.xml
<CustomField>
    <fullName>CustomField_slCbU__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkLmYY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>